add new website from server na

--- a/xem-phim-bo/nam-ngoc-khanh-tam/index.html
+++ b/xem-phim-bo/nam-ngoc-khanh-tam/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1660,7 +1660,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1681,18 +1681,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay" title="Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay">
+          <a class="list-top-movie-link" href="/phim-moi/tuoi-tho-ba-dao-cua-sheldon-phan-4" title="Tuổi Thơ Bá Đạo của Sheldon (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-tho-ba-dao-cua-sheldon-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay
+             Tuổi Thơ Bá Đạo của Sheldon (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Club Friday - The Series 6: Changed
+             Young Sheldon (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1703,18 +1703,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-tinh-nghich" title="Cô Nàng Tinh Nghịch">
+          <a class="list-top-movie-link" href="/phim-moi/ong-bo-an-chay-ki-2" title="Ông bố ăn chay (kì 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-tinh-nghich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-bo-an-chay-ki-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Nàng Tinh Nghịch
+             Ông bố ăn chay (kì 2)
             </span>
             <span class="list-top-movie-item-en">
-             Frivolous Lola
+             The Vegetarian''s Story
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tokyo-ghoul-s" title="Tokyo Ghoul: ‘S’">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tokyo-ghoul-s-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tokyo Ghoul: ‘S’
+            </span>
+            <span class="list-top-movie-item-en">
+             Tokyo Ghoul: 'S'
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1725,21 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/qua-ot-va-qua-ca" title="Quả Ớt Và Quả Cà">
+          <a class="list-top-movie-link" href="/phim-moi/con-tin-ngoi-sao-mat-tich" title="Con Tin: Ngôi Sao Mất Tích">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-ot-va-qua-ca-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-tin-ngoi-sao-mat-tich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quả Ớt Và Quả Cà
+             Con Tin: Ngôi Sao Mất Tích
             </span>
             <span class="list-top-movie-item-en">
-             헌고추, 새가지
+             Hostage: Missing Celebrity
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,43 +1769,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoi-khieu-vu-41" title="Buổi khiêu vũ 41">
+          <a class="list-top-movie-link" href="/phim-moi/2-nang-ba-dao-phan-4" title="2 Nàng Bá Đạo (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoi-khieu-vu-41-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/2-nang-ba-dao-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Buổi khiêu vũ 41
+             2 Nàng Bá Đạo (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Dance of the Forty One
+             2 Broke Girls (Season 4)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-nu-u-hon" title="Thiện Nữ U Hồn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-nu-u-hon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiện Nữ U Hồn
-            </span>
-            <span class="list-top-movie-item-en">
-             A Chinese Ghost Story
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
