add new website from server na

--- a/xem-phim-moi/monkey-man-bao-thu/index.html
+++ b/xem-phim-moi/monkey-man-bao-thu/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1772,7 +1772,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1793,18 +1793,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vong-xuyen-tu" title="Vong Xuyên Tự">
+          <a class="list-top-movie-link" href="/phim-moi/tram-dung-tu-than-2-tiec-mau" title="Trạm Dừng Tử Thần 2: Tiệc Máu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-xuyen-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tram-dung-tu-than-2-tiec-mau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vong Xuyên Tự
+             Trạm Dừng Tử Thần 2: Tiệc Máu
             </span>
             <span class="list-top-movie-item-en">
-             Don't Forget My Love
+             Cabin Fever 2: Spring Fever
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1815,18 +1815,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chan-troi-do-phan-2" title="Chân trời đỏ (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/thuc-the-ma-quai" title="Thực thể ma quái">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chan-troi-do-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-the-ma-quai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chân trời đỏ (Phần 2)
+             Thực thể ma quái
             </span>
             <span class="list-top-movie-item-en">
-             Sky Rojo (Season 2)
+             The Entity
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1837,18 +1837,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hi-quyen-thuong-lac-thanh" title="Hỉ Quyển Thường Lạc Thành">
+          <a class="list-top-movie-link" href="/phim-moi/van-tich-doc-coc-tan-nuong" title="Vân Tịch: Độc Cốc Tân Nương">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hi-quyen-thuong-lac-thanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-tich-doc-coc-tan-nuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hỉ Quyển Thường Lạc Thành
+             Vân Tịch: Độc Cốc Tân Nương
             </span>
             <span class="list-top-movie-item-en">
-             The Happy Seven in Changan
+             Poison Valley Bride
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1859,21 +1859,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tan-van-cong-truyen-ky" title="Tấn Văn Công Truyền Kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/if-i-stay" title="If I Stay">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-van-cong-truyen-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/if-i-stay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tấn Văn Công Truyền Kỳ
+             If I Stay
             </span>
             <span class="list-top-movie-item-en">
-             Tấn Văn Công Truyền Kỳ
+             If I Stay
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1881,21 +1881,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/that-lac" title="Thất lạc">
+          <a class="list-top-movie-link" href="/phim-moi/cung-noi-ve-chu" title="Cùng nói về CHU">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/that-lac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cung-noi-ve-chu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thất lạc
+             Cùng nói về CHU
             </span>
             <span class="list-top-movie-item-en">
-             LOST
+             Let's Talk About CHU
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
