--- a/xem-phim-moi/monkey-man-bao-thu/index.html
+++ b/xem-phim-moi/monkey-man-bao-thu/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1736,28 +1736,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1770,6 +1748,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1793,18 +1793,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tram-dung-tu-than-2-tiec-mau" title="Trạm Dừng Tử Thần 2: Tiệc Máu">
+          <a class="list-top-movie-link" href="/phim-moi/de-che-tan-bao" title="Đế Chế Tàn Bạo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tram-dung-tu-than-2-tiec-mau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-che-tan-bao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trạm Dừng Tử Thần 2: Tiệc Máu
+             Đế Chế Tàn Bạo
             </span>
             <span class="list-top-movie-item-en">
-             Cabin Fever 2: Spring Fever
+             Viking Legacy
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1815,21 +1815,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuc-the-ma-quai" title="Thực thể ma quái">
+          <a class="list-top-movie-link" href="/phim-moi/molang" title="Molang">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-the-ma-quai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/molang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thực thể ma quái
+             Molang
             </span>
             <span class="list-top-movie-item-en">
-             The Entity
+             Molang
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1837,40 +1837,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-tich-doc-coc-tan-nuong" title="Vân Tịch: Độc Cốc Tân Nương">
+          <a class="list-top-movie-link" href="/phim-moi/tenpuru-no-one-can-live-on-loneliness" title="TenPuru: No One Can Live on Loneliness">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-tich-doc-coc-tan-nuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tenpuru-no-one-can-live-on-loneliness-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vân Tịch: Độc Cốc Tân Nương
+             TenPuru: No One Can Live on Loneliness
             </span>
             <span class="list-top-movie-item-en">
-             Poison Valley Bride
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/if-i-stay" title="If I Stay">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/if-i-stay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             If I Stay
-            </span>
-            <span class="list-top-movie-item-en">
-             If I Stay
+             Tenpuru
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1881,18 +1859,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cung-noi-ve-chu" title="Cùng nói về CHU">
+          <a class="list-top-movie-link" href="/phim-moi/lang-nha-bang" title="Lang Nha Bảng">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cung-noi-ve-chu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-nha-bang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cùng nói về CHU
+             Lang Nha Bảng
             </span>
             <span class="list-top-movie-item-en">
-             Let's Talk About CHU
+             Nirvana in Fire
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cia-tai-xuat-2" title="CIA tái xuất 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cia-tai-xuat-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             CIA tái xuất 2
+            </span>
+            <span class="list-top-movie-item-en">
+             RED 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
